# opc-ua-influxdb-test

./: .gitignore  README.md
client-influx-db/: Dockerfile  opc-ua-client.py  requirements.txt
sensor-simulator/: opc-ua-server.py  pyproject.toml
